Rechtschreibkontrolle und Beschreibungen überarbeitet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name="description" content="Free Web tutorials">
+    <meta name="description" content="Web Engineering Master Kurs">
     <meta name="keywords" content="HTML, CSS, JavaScript, PWA, WA, SVG, Node">
     <meta name="author" content="Moritz Balg">
     <meta name="theme-color" content="#b8ccc1">
