--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -1,5 +1,5 @@
 <p>
-    Die erste Aufgabe soll eine schnelle Einführung in das Thema Webengineering geben, indem grundlegende Technologien wie HTML, CSS und HTTP vorgestellt und in ersten Aufgaben eingesetzt werden. In den ersten zwei Aufgaben werden historische Aspekete zum WWW und technische Feinheiten des HTTP-Protokolls erläutert. In den weiteren Aufgaben werden Wireframes mit HTML und CSS nachgebildet.  
+    Die erste Aufgabe sollte eine schnelle Einführung in den Themenkomplex Webengineering geben, indem grundlegende Technologien wie HTML, CSS und HTTP vorgestellt und in ersten Aufgaben eingesetzt wurden. In den ersten zwei Aufgaben werden historische Aspekete zum WWW und technische Grundlagen des HTTP-Protokolls erläutert. In den weiteren Aufgaben werden Wireframes mit HTML und CSS nachgebildet.  
 </p>
 
 <h2>Aufgabe 1.1 - Fachliche Argumentation über Erfolgsprinzipien des WWW</h2>
@@ -57,7 +57,7 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u1/tribute.png" alt="Error">
+            <img src="tasks/u1/tribute.png" alt="Tribute">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
@@ -82,8 +82,8 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u1/survey.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u1/survey.png" alt="Survey">
+            <figcaption>Abbildung 1.2: Mock-Up einer Form mit mehreren Input-Feldern</figcaption>
         </figure>
     </example-tab>
 
@@ -106,8 +106,8 @@
     
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u1/landing.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u1/landing.png" alt="Landingpage">
+            <figcaption>Abbildung 1.3: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
