--- a/tasks/u10/index.html
+++ b/tasks/u10/index.html
@@ -7,7 +7,7 @@
     <example-tab title="&#9432;">
         <h3>Eingabe Auswerter</h3>
         <p>
-            In dieser Aufgabe sollte eine Webkomponente entickelt werden, die primär aus einem Textfeld besteht, dessen Inhalt ausgewertet wird. Dabei soll die Anzahl der Buchsteben, die Anzahel der Leerzeichn sowie die Anzahl an Worten gezählt werden. Sie finden in der Vorschau das Element zwei mal, wodurch gezeigt werden sollte,dass die Komponenten unabhängig voneineander laufen.
+            In dieser Aufgabe sollte eine Webkomponente entwickelt werden, die primär aus einem Textfeld besteht, dessen Inhalt ausgewertet wird. Dabei soll die Anzahl der Buchstaben, die Anzahl der Leerzeichen sowie die Anzahl an Worten gezählt werden. Sie finden in der Vorschau das Element zweimal, wodurch gezeigt werden sollte, dass die Komponenten unabhängig voneinander laufen.
         </p>
     </example-tab>
 
@@ -25,7 +25,7 @@
     <example-tab title="&#9432;">
         <h3>Komponente für Menüs in Vue</h3>
         <p>
-            Um die Komponenten Entwicklung weiter zu treiben, wurde in dieser Aufgabe eine Webkomponente Entwickelt, die ein Menü repräsentiert. Dem Tag kann das Attribut "orientation" übergeben werden um zu entscheiden in welche Richtung das Menü ausgerichtet wird. In der Vorschau sehen Sie beide Varianten.
+            Um die Komponenten Entwicklung weiter zu treiben, wurde in dieser Aufgabe eine Webkomponente entwickelt, die ein Menü repräsentiert. Dem Tag kann das Attribut "orientation" übergeben werden, um zu entscheiden, in welche Richtung das Menü ausgerichtet wird. In der Vorschau sehen Sie beide Varianten.
         </p>
     </example-tab>
 
