--- a/tasks/u11/index.html
+++ b/tasks/u11/index.html
@@ -1,4 +1,4 @@
-<p><dfn>WebAssembly</dfn> ist ein bzw. <dfn>wasm</dfn> ist ein binäres Ausführungs-Format. Dieses Fomrat kann von einer Stack-Basierten virtuellen Machiene, welche im Broswer integriert werden kann interpretiert werden. Wasm kann aus verschiedenen Hochsprachen wie C, C++, Java, TypeScript uvm. compiliert werden. Dadurch ermöglicht es den Einsatz von diesen Sprachen im Webbrowser. <dfn>WAT</dfn> ist eine textuelle Repräsentation von wasm und erinnert sehr stark andere Assembly Sprachen.</p>
+<p><dfn>WebAssembly</dfn> ist ein bzw. <dfn>wasm</dfn> ist ein binäres Ausführungsformat. Dieses Format kann von einer Stack-basierten virtuellen Maschine, welche im Browser integriert werden kann, interpretiert werden. Wasm kann aus verschiedenen Hochsprachen wie C, C++, Java, TypeScript uvm. kompiliert werden. Dadurch ermöglicht es den Einsatz von diesen Sprachen im Webbrowser. <dfn>WAT</dfn> ist eine textuelle Repräsentation von wasm und erinnert sehr stark andere Assembly Sprachen.</p>
 
 <h2>Aufgabe 11.1 - WebAssembly-Modul von Hand erstellen</h2>
 <example-tabs>
@@ -27,7 +27,8 @@
 <example-tabs>
     <example-tab title="&#9432;">
         <h3>Performanz-Vergleich zwischen WAT und JS</h3>
-        <p>In dieser Aufgabe sollte ein Performanz-Vergleich zwischen JS und Webassembly durchgeführt werden. Dazu sollte ein Algorithmus zur berechnung von Primzahlen in den beiden Varianten entwickelt werden. Um es etwas einfacher zu machen wurde der Algorthmus nicht in WAT sondern in C geschrieben und mit einem Compiler in wasm übersetz. Den Performanz Test können Sie im Vorschau-Tab selber einmal ausführen. Die von mir gemessenen Ergebnisse finden Sie etwas weiter unten in der Auswertung.</p>
+        <p>
+            In dieser Aufgabe sollte ein Performanz-Vergleich zwischen JS und Webassembly durchgeführt werden. Dazu sollte ein Algorithmus zur Berechnung von Primzahlen in den beiden Varianten entwickelt werden. Um es etwas einfacher zu machen, wurde der Algorthmus nicht in WAT, sondern in C geschrieben und mit einem Compiler in wasm übersetz. Den Performanztest können Sie im Vorschau-Tab selber einmal ausführen. Die von mir gemessenen Ergebnisse finden Sie etwas weiter unten in der Auswertung.</p>
     </example-tab>
 
     <example-tab title="Code WAT">
