--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -1,5 +1,5 @@
 <p>
-    Da immer mehr Endanwender Webseiten nicht mehr primär über einen Desktop PC aufrufen, sondern vermehrt auch über mobile Endgeräte (Siehe Abb. 2.1) wurde der Anspruch an Webseiten das Design benutzerfreundlicher für mobile Geräte zu gestalten immer größer.
+    Da immer mehr Endanwender Webseiten nicht mehr primär über einen Desktop PC aufrufen, sondern vermehrt auch über mobile Endgeräte (Siehe Abb. 2.1), wurde der Anspruch an Webseiten das Design benutzerfreundlicher für mobile Geräte zu gestalten immer größer.
     <figure>
         <img src="tasks/u2/mobil_vs_desktop.png" alt="Statisitik mobil vs desktop">
         <figcaption>
@@ -8,7 +8,7 @@
     </figure> 
 </p>
 
-<p>Da man doppelte Code-Basen gerne vermeiden möchte und nicht eine mobile und eine stationäre Webseite pflegen möchte, wurden die Möglichkeiten mit HTML, CSS und JS immer größer Webseiten responsiv zu gestalten. Dies bedeutet, dass die Webseite sich dynamisch an die Bildschirmauflösung anpasst. Neben neuen Einheiten in CSS wie <dfn>VH</dfn> und <dfn>VW</dfn> gibt es viele weitere Layoutmöglichkeiten wie <dfn>Flexbox</dfn> und <dfn>Grid</dfn> die das Entwickeln einer reponsiven Seite vereinfachen sollen. Diese beiden Technologien werden in dieser Aufgabe präsentiert.
+<p>Man möchte doppelte Code-Basen gerne vermeiden und nicht eine mobile und eine stationäre Webseite pflegen. Deshalb wurden die Möglichkeiten mit HTML, CSS und JS immer größer Webseiten responsiv zu gestalten. Das bedeutet, dass sich die Webseite dynamisch an die Bildschirmauflösung anpasst. Neben neuen Maßeinheiten in CSS wie <dfn>VH</dfn> und <dfn>VW</dfn> ergeben sich weitere Layoutmöglichkeiten mit <dfn>Flexbox</dfn> und <dfn>Grid</dfn> die das Entwickeln einer reponsiven Seite vereinfachen sollen. Diese beiden Technologien werden in dieser Aufgabe präsentiert.
 </p>
 
 <h2>Aufgabe 2.1 - Responsiv mit Flexbox Desktop-First</h2>
@@ -23,8 +23,8 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u2/holy-grail1.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u2/holy-grail1.png" alt="Holy-Grail">
+            <figcaption>Abbildung 2.2: Der Holy-Grail der Web-Entwicklung</figcaption>
         </figure>
     </example-tab>
 
@@ -69,8 +69,8 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u2/holy-grail2.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u2/holy-grail2.png" alt="Holy-Grail">
+            <figcaption>Abbildung 2.3: Holy-Grail der Web-Entwicklung</figcaption>
         </figure>
     </example-tab>
 
@@ -101,8 +101,8 @@
     
 <example-tab title="Mockup">
     <figure>
-        <img src="tasks/u1/landing.png" alt="Error">
-        <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        <img src="tasks/u1/landing.png" alt="Landing Page">
+        <figcaption>Abbildung 2.4: Mock-Up einer Landing-Page</figcaption>
     </figure>
 </example-tab>
 
