--- a/tasks/u3/index.html
+++ b/tasks/u3/index.html
@@ -1,5 +1,6 @@
 <p>
-    <dfn>Javascript</dfn> ist die vorherschende Sprache für Clientseitige Webseitenprogrammierung. In dieser Übung wird eine Vielzahl an Funktionen vorgestellt die im Rahmen der Aufgaben entwickelt werden sollte. Wenn Sie die Funktionen austesten wollen müssen Sie dafür lediglich Ihre Web-Console öffnen, indem sie <kbd>F12</kbd>. In der Konsole stehen Ihnen auf dieser Unterseite alle Funktionen zur Verfügung, die in den Aufgaben vorgestellt wurden.
+    <dfn>Javascript</dfn> (JS) ist eine leichtgewichtige, schwach typisierte und interpretierte Programmiersprache. Sie hat viele Besonderheiten, wodurch sie sich von anderen C-orientierten Programmiersprachen abgrenzt. Beispielsweise sind in JavaScript Funktionen First-Class Objects. Das bedeutet, dass Funktionen Variaben zugewiesen oder als Parameter anderen Funktionen übergeben werden können. JS ist die vorherrschende Sprache für clientseitige Webseitenprogrammierung <reference-source author="Mozilla" year="2022" url="https://developer.mozilla.org/de/docs/Web/JavaScript">JavaScript
+    </reference-source>. In dieser Übung wird eine Vielzahl an Funktionen vorgestellt, die im Rahmen der Aufgaben entwickelt werden sollten. Wenn Sie die Funktionen austesten wollen, können Sie den jeweiligen Code über den <dfn>RUN</dfn>-Button ausführen. Sie können auch Änderungen in den einzelnen Code-Abschnitten durchführen und diese live ausführen. Viel Spaß beim Ausprobieren. 
 </p>
 
 <h2>Aufgabe 3.1 - Funktionen in JavaScript</h2>
@@ -362,3 +363,8 @@ mulc = binaryc(mul); mulc(2, 3, store) // variable === 6
         <js-console src="tasks/u3/js-files/a2_16.js"></js-console>
     </example-tab>
 </example-tabs>
+
+<h2>Aufgabe 3.3 - Integration in die Webseite</h2>
+<p>
+    Auch in dieser Webseite kommt JavaScript an vielen Stellen zum Einsatz. Alle Web-Komponenten sind mit der Sprache entwickelt und viele weitere Aufgaben wurden auf dieser Webseite mit der Hilfe von Javascript umgesetzt. Vielleicht ist Ihnen bereits aufgefallen, dass egal welche Unterseite Sie auf dieser Webseite besuchen, die URL immer identisch ist. Dies liegt daran, dass alle Aufgaben und deren Beschreibungen dynamisch über ein Script in die Webseite geladen werden.
+</p> 
