--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -1,5 +1,5 @@
 <p>
-    Mittels JavaScript kann auf das <abbr title="Document Object Model">DOM</abbr> zugegriffen und dies Manipuliert werden. Dies ermöglicht es weitere Elemente in den DOM einzufügen, zu entfernen, diese Anzupassen oder weitere Manipulationen vorzunehmen. Erst dadurch wurde es möglich die statischen HTML Webseiten dynamischer zu gestalten und andauernde Reloads zu verhindern. Die DOM Manipulation kann sehr vielseitig eingesetzt werden, wie Sie auch in den weiteren Aufgaben sehen werden. Beispielsweise könne Sie so Eingabefelder bereits Client-Seitig überprüfen und sparen sich zusätzliche Kommunikkation mit dem Server. An sich können Sie die gesamte Seite viel dynamischer gestalten, indem Sie weitere Elemente zur Laufzeit erst erzeugen. Um diese Themen geht es in der folgenden Übung.
+    Das <dfn>Document Object Model</dfn>(DOM) ist eine strukturelle Repräsentation von XML, SVG oder HTML Dokumenten. Mittels JavaScript kann auf das DOM zugegriffen und manipuliert werden. Dies ermöglicht es, weitere Elemente in den DOM einzufügen, zu entfernen, diese anzupassen oder weitere Manipulationen vorzunehmen. Erst dadurch wird es möglich, die statischen HTML Webseiten dynamischer zu gestalten und ständige Reloads zu verhindern <reference-source author="Mozilla" year="2022" url="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model">DOM</reference-source>. Die DOM Manipulation kann sehr vielseitig eingesetzt werden, wie Sie auch in den weiteren Aufgaben sehen können. Beispielsweise können Eingabefelder bereits Client-seitig überprüfen werden, wodurch zusätzliche Kommunikation mit dem Server eingespart werden kann. An sich können Sie die gesamte Seite viel dynamischer gestalten, indem Sie weitere Elemente zur Laufzeit erzeugen. Um diese Themen geht es in der folgenden Übung.
 </p>
 
 <h2>Aufgabe 4.1 - Einkaufsliste</h2>
@@ -8,14 +8,14 @@
     <example-tab title="&#9432;">
         <h3>Dom Manipulation</h3>
         <p>
-            In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben die Einträge aus der Liste wieder zu entfernen. 
+            In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben, die Einträge aus der Liste wieder zu entfernen. 
         </p>
     </example-tab>
     
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u4/Einkaufsliste.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u4/Einkaufsliste.png" alt="Einkaufsliste">
+            <figcaption>Abbildung 4.1: Vorschau der Einkaufsliste</figcaption>
         </figure>
     </example-tab>
 
@@ -46,8 +46,8 @@
     
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u4/Rednerliste.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u4/Rednerliste.png" alt="Rednerliste">
+            <figcaption>Abbildung 4.2: Vorschau der Rednerliste</figcaption>
         </figure>
     </example-tab>
 
@@ -71,15 +71,15 @@
     <example-tab title="&#9432;">
         <h3>Einfacher Excel Klon im Browser</h3>
         <p>
-            Hier sollte eine einfache Tabellenkalkulation entwickelt werdn, die in der Lage war eine einfache Summenformel auszuwerten.
-            In dieser Version ist lediglich eine einfache Summenoperation möglich. Sie können dies in der Vorschau testen, indem Sie belibige Werte in zwei Zellen eintragen und in eine dritte Zelle: "sum=1,1:2,2" eingeben. Passen Sie die Parameter für die Summe entsprechend der ausgewählten Zellen an!
+            Hier sollte eine einfache Tabellenkalkulation entwickelt werden, die in der Lage sein sollte, eine einfache Summenformel auszuwerten.
+            In dieser Version ist lediglich eine einfache Summenoperation möglich. Sie können dies in der Vorschau testen, indem Sie beliebige Werte in zwei Zellen eintragen und in eine dritte Zelle: "sum=1,1:2,2" eingeben. Passen Sie die Parameter für die Summe, entsprechend der ausgewählten Zellen, an!
         </p>
     </example-tab>
 
     <example-tab title="Mockup">
         <figure>
-            <img src="tasks/u4/excel_formel.png" alt="Error">
-            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+            <img src="tasks/u4/excel_formel.png" alt="Tabellenkalkulation">
+            <figcaption>Abbildung 4.3: Vorschau der Tabellenkalkulation</figcaption>
         </figure>
     </example-tab>
 
@@ -100,7 +100,7 @@
 
     <example-tab title="&#9432;">
         <h3>Weitere DOM-Manipulation</h3>
-        <p>Hier sollte ein <abbr title="What you see is what you get">WYSIWYG</abbr>-Editor entworfen werden, mit dem man Text und vor allem das Layout dynamisch bearbeiten kann.</p>
+        <p>In der letzten Aufgabe sollte ein <abbr title="What you see is what you get">WYSIWYG</abbr>-Editor entworfen werden, mit dem man Text und vor allem das Layout dynamisch bearbeiten kann.</p>
     </example-tab>
 
     <example-tab title="Code - a4.html">
