--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -1,5 +1,6 @@
 <p>
-    <dfn>Web-Komponenten</dfn> bieten Entwicklern die Möglichkeit eigene HTML-Tags zu definieren. Damit können eigenen Elemente erstellt werden, die Webseitenübergreifend weiderverwendet werden können. Webdesigner können die entworfenen Komponenten deklarativ in Ihrer Webseite bzw. im Frontend einsetzen und müssen sich keine Gedanken über den Code dahinter machen. 
+    <dfn>Web-Komponenten</dfn> bieten Entwicklern die Möglichkeit, eigene HTML-Tags zu definieren. Damit können eigenen Elemente erstellt werden, die Webseitenübergreifend wiederverwendet werden können. Webdesigner können die entworfenen Komponenten deklarativ in Ihrer Webseite bzw. im Frontend einsetzen und müssen sich keine Gedanken über den Code dahinter machen<reference-source author="selfhtml" year="2022" url="https://wiki.selfhtml.org/wiki/HTML/Web_Components/custom_elements">custom-elements
+    </reference-source>.
 </p>
 <h2>Aufgabe 8.1 - Web-Komponenten erstellen</h2>
 <p>In dieser Aufgabe sollten Lösungen aus älteren Aufgaben in Webkomponenten überführt werden.</p>
@@ -22,7 +23,7 @@
 <h3>8.1.2 - Rednerliste</h3>
 <example-tabs>
     <example-tab title="&#9432;">
-        <p>Mit der Rednerliste können Redner eingetragen werden. Sobald ein neuer Redner angelegt wurde, beginnt ein Timer, der die Redezeit misst. Wird ein weiterer Redner hinzugefügt, stoppt der Timer des ersten Redner und der des zweiten startet. Weiterhin kann der Timer über eine entsprechende Schaltfläche angehalten und fortgesetzt werden.</p>
+        <p>Mit der Rednerliste können Redner eingetragen werden. Sobald ein neuer Redner angelegt wurde, beginnt ein Timer, der die Redezeit misst. Wird ein weiterer Redner hinzugefügt, stoppt der Timer des ersten Redners und der des zweiten startet. Weiterhin kann der Timer über eine entsprechende Schaltfläche angehalten und fortgesetzt werden.</p>
     </example-tab>
 
     <example-tab title="Code">
@@ -39,7 +40,7 @@
 <example-tabs>
     <example-tab title="&#9432;">
         <p>
-            Eine einfache Tabellenkalkulation die es ermöglicht einträge in eine Tabelle vorzunehmen und mit der Formel: "sum=1,1:1,2" Berechnungen durchzuführen. Achtung! die zwei Parameter hinter dem Gleichheitszeichen entsprechen den zellenadressen und müssen ggf. für Ihr Beispiel angepasst werden.  
+            Eine einfache Tabellenkalkulation, die es ermöglicht, Einträge in eine Tabelle vorzunehmen und mit der Formel: "sum=1,1:1,2" Berechnungen durchzuführen. Achtung! Die zwei Parameter hinter dem Gleichheitszeichen entsprechen den Zellenadressen und müssen ggf. für Ihr Beispiel angepasst werden.  
         </p>
     </example-tab>
 
@@ -93,7 +94,7 @@
 <example-tabs>
     <example-tab title="&#9432;">
         <p>
-            Mit diesem Editor können Sie mit der Maus einen Pfad zeichnen, der jenachdem wie lange Sie auf einer Stelle verweilen etwas dicker oder dünner ausfällt. 
+            Mit diesem Editor können Sie mit der Maus einen Pfad zeichnen, der je nachdem wie lange Sie auf einer Stelle verweilen, etwas dicker oder dünner ausfällt. 
         </p>
     </example-tab>
 
@@ -111,7 +112,7 @@
     <example-tab title="&#9432;">
         <h3>Erste Schritte mit LIT-Element</h3>
         <p>
-            In dieser Aufgabe wurde eine Menü-Komponente entwickelt die ein simples Menüband baut und je nach Parameterwahl horizontal oder vertikal ausrichtet.
+            In dieser Aufgabe wurde eine Menü-Komponente entwickelt, die ein simples Menüband baut und je nach Parameterwahl horizontal oder vertikal ausrichtet.
         </p>
     </example-tab>
 
@@ -130,7 +131,7 @@
 
 <h2>Aufgabe 8.4 - Integration in die eigene Webseite</h2>
 <p>
-    In dieser Webseite verstechen sich so einige Web-Komponenten. Hier eine kleine Auflistung der Custom-Elements:
+    In dieser Webseite wurden so einige Web-Komponenten eingebaut. Hier eine kleine Auflistung der Custom-Elements:
     <ul class="padding-list">
         <li><dfn>Datei-Viewer</dfn>: Text/Code Vorschau</li>
         <li><dfn>Live-Viewer</dfn>: Eingebetete Ansicht von HTML und JS Codes</li>
@@ -138,5 +139,6 @@
         <li><dfn>TabView</dfn>: Tab Ansicht</li>
         <li><dfn>Tipping Text</dfn>: Text wird getipp</li>
         <li><dfn>Task-Card</dfn>: Vorschau für die einzelnen Aufgaben</li>
+        <li><dfn>JS-Console</dfn>: Vorschau für die einzelnen JS Aufgaben</li>
     </ul>
 </p>
