--- a/tasks/u6/index.html
+++ b/tasks/u6/index.html
@@ -1,11 +1,13 @@
 <p>
-    In dieser Aufgabe geht es <dfn>Scalable Vector Graphics</dfn> (SVG). Im Gegensatz zu anderen Formaten(wie JPEG oder PNG) handelt es sich hierbei nicht um Rastergrafiken sondern um sogenannte Vektor-Dateien. Ein großer Vorteil von Vektorgrafiken liegt daran, dass diese auch wenn sie groß skaliert werden ihre Bildschärfe nicht verlieren, da es sich bei SVGs um berechnete Bilder handelt. Die Pfade und Objekte die die Basis für diese Technologie bilden passen sich durch ihre mathematische Beschreibung der Umgebungsgröße an. In den einzelnen Aufgaben sollten unterschiedliche SVG-Grafiken aus HTML und JS heraus erstellt und animiert werden <reference-source author="w3Schools" year="2022" url="https://www.w3schools.com/graphics/svg_intro.asp">SVG Tutorial</reference-source> . 
+    In dieser Aufgabe geht es um <dfn>Scalable Vector Graphics</dfn> (SVG). Im Gegensatz zu anderen Formaten(wie JPEG oder PNG) handelt es sich hierbei nicht um Rastergrafiken, sondern um sogenannte Vektor-Dateien. Ein großer Vorteil von Vektorgrafiken liegt daran, dass diese, auch wenn sie groß skaliert werden, ihre Bildschärfe nicht verlieren, da es sich bei SVGs um berechnete Grafiken handelt. Die Pfade und Objekte, die die Basis für diese Technologie bilden passen sich durch ihre mathematische Beschreibung der Umgebungsgröße an. In den einzelnen Aufgaben sollten unterschiedliche SVG-Grafiken aus HTML und JS heraus erstellt und animiert werden <reference-source author="w3Schools" year="2022" url="https://www.w3schools.com/graphics/svg_intro.asp">SVG Tutorial</reference-source> . 
 </p>
 <h2>Aufgabe 6.1 - Statistik-Balkendiagramm in SVG </h2>
 <example-tabs>
     <example-tab title="&#9432;">
         <h3>Dynamisch erzeugte Grafiken</h3>
-        <p>In dieser Aufgabe wird ein Balkendirgramm dynamisch, basierend auf den im JSON angegebenen Daten, berechnet und mit einer lkeichten Animation ausgegeben.</p>
+        <p>
+            In dieser Aufgabe wird ein Balkendiagramm dynamisch basierend auf den im JSON angegebenen Daten berechnet und mit einer leichten Animation ausgegeben.
+        </p>
     </example-tab>
     <example-tab title="HTML">
         <file-viewer src="tasks/u6/a1.html">a1.html</file-viewer>
@@ -25,7 +27,7 @@
 <example-tabs>
     <example-tab title="&#9432;">
         <h3>Interaktion mit SVG</h3>
-        <p>Bei dieser Aufgabe soll mit einem SVG interagiert werden, welches zuvor generiert wurde. Dabei handelt es sich um eine kleine Animation für Bezier-Kuven. </p>
+        <p>Bei dieser Aufgabe soll mit einem SVG interagiert werden, welches zuvor generiert wurde. Dabei handelt es sich um eine kleine Animation für Bezier-Kurven. </p>
     </example-tab>
 
     <example-tab title="HTML">
@@ -42,7 +44,9 @@
 <example-tabs>
     <example-tab title="&#9432;">
         <h3>Strichdicken Erkennung</h3>
-        <p>Ähnlich wie bei vielen Tablets mit Stifteingabe, sollte ein Strichdicken Erkennung entwickelt werden, die den aktuell mit der Maus gezeichneten Strich dicker erscheinen läss, wenn man länger an einer Stelle verweilt.</p>
+        <p>
+            Ähnlich wie bei vielen Tablets mit Stifteingabe sollte eine Strichdickenerkennung entwickelt werden, die den aktuell mit der Maus gezeichneten Strich dicker erscheinen läss, wenn man länger an einer Stelle verweilt.
+        </p>
     </example-tab>
     
     <example-tab title="HTML">
@@ -57,4 +61,6 @@
 
 
 <h2>Aufgabe 6.4 - Integration in die eigene Webseite</h2>
-<p>Bei dem Logo, welches am oberen linken Rand der Webseite plaziert ist, handelt es sich um ein SVG mit einer kleinen Animation wenn ein Click Event ausgelöst wird.</p>
+<p>
+    Bei dem Logo, welches am oberen linken Rand der Webseite platziert ist, handelt es sich um ein SVG mit einer kleinen Animation, wenn ein Click Event ausgelöst wird.
+</p>
