--- a/tasks/u9/index.html
+++ b/tasks/u9/index.html
@@ -1,17 +1,19 @@
 <p>
-    Aufgabe 9 beschäftigt sich mit <dfn>Progressive Web Apps</dfn> (PWA). Wie bereits in Aufgabe 2 herausgestellt wurde, erfolgt der zugriff auf Webseiten immer mehr über mobile Endgeräte. Neben responisven Webseiten wurden in den vergangenen Jahren auch oft Apps für die mobile Anwendug entwickelt. Dadurch ergeben sich doppelte Code-Basen die auch von unterschiedlichen Teams meist mit unterschiedlichen Programmiersprachen gepflegt werden müssen. PWA's sollen dem Abhilfe schaffen, indem Webseiten wie native Apps installierbar werden. Des Weiteren sollen sie auch offline verwendbar werden indem sie mittels Service Worker die Webseite cachen.  
+    Aufgabe 9 beschäftigt sich mit <dfn>Progressive Web Apps</dfn> (PWA). Wie bereits in Aufgabe 2 herausgestellt wurde, erfolgt der zugriff auf Webseiten immer mehr über mobile Endgeräte. Neben responisven Webseiten wurden in den vergangenen Jahren auch oft Apps für die mobile Anwendung entwickelt. Dadurch ergeben sich doppelte Code-Basen, die auch von unterschiedlichen Teams meist mit unterschiedlichen Programmiersprachen gepflegt werden müssen. PWA's sollen dem Abhilfe schaffen, indem Webseiten wie native Apps installierbar werden. Des Weiteren sollen sie auch offline verwendbar werden, indem sie mittels Service Worker die Webseite cachen.  
 </p>
 <h2>Aufgabe 9.1 - PWA</h2>
 <example-tabs>
     <example-tab title="&#9432;">
         <h3>Erste PWA</h3>
-        <p>In dieser Aufgabe sollte aus dem aus Aufgabe TODO entworfenen Web Navigator eine PWA entwickelt werden. Da es schierig ist eine PWA in einer Webseite zu präsentieren wird in dieser Aufgabe lediglich das Vorgehen beschrieben. Sollten Sie dennoch einen Blick in die PWA werfen wollen, können Sie sich alle relevanten Dateien als ZIP iim letzten Tab herunterladen.</p>
+        <p>In dieser Aufgabe sollte aus dem aus Aufgabe <dfn>5.4</dfn> entworfenen Web Navigator eine PWA entwickelt werden. Da es schwierig ist eine PWA in einer Webseite zu präsentieren, wird in dieser Aufgabe lediglich das Vorgehen beschrieben. Sollten Sie dennoch einen Blick in die PWA werfen wollen, können Sie sich alle relevanten Dateien als ZIP iim letzten Tab herunterladen.</p>
     </example-tab>
 
     <example-tab title="Vorgehen">
-        <p>Mit der Library Lit-Element wurde ein Custom Element erzeugt, welches in die HTML-Webseite eingebunden wurde.
+        <p>
+            Mit der Library Lit-Element wurde ein Custom Element erzeugt, welches in die HTML-Webseite eingebunden wurde.
             Dieses Custom-Element lädt durch die Angabe des Attributes "path" ein JSON-File, welches die Inhalte der Webseite bereithält.
-            Ein Service-Worker nutzt die Cache-Api um gewisse Webseiten-Anteile zu speichern. Weiterhin lauscht er auf das Fetch-Event, um bei anfallenden Anfragen die Webseiten aus dem Cache bereitzustellen. Das Manifest, welches im Root-Verzeichnis abliegt, enthält Informationen über die Web-App und ermöglicht die deren Installation.</p>
+            Ein Service-Worker nutzt die Cache-Api um gewisse Webseiten-Anteile zu speichern. Weiterhin lauscht er auf das Fetch-Event, um bei anfallenden Anfragen die Webseiten aus dem Cache bereitzustellen. Das Manifest, welches im Root-Verzeichnis abliegt, enthält Informationen über die Web-App und ermöglicht die deren Installation.
+        </p>
     </example-tab>
 
     <example-tab title="Probleme und Lösungskonzepte">
@@ -49,4 +51,4 @@ Cumulative Layout Shift: 0
 
 
 <h2>Aufgabe 9.2 - Integration in die eigene Webseite</h2>
-<p>Diese Webseite ist ebenfalls eine PWA! Um sie auch offline verwenden zu können installieren Sie die App einfach über Ihren Browser. </p>
+<p>Diese Webseite ist ebenfalls eine PWA! Um sie auch offline verwenden zu können, installieren Sie die App einfach über Ihren Browser. </p>
